- API and model reworked - frontend removed

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ShoppingList - Főoldal{% endblock %}
+{% block title %}ListHub API{% endblock %}
 
 {% block body %}
-    <h1>ShoppingList</h1>
-    <p>Sikeres bejelentkezés után ide érkezünk.</p>
+    <h1>ListHub API</h1>
 {% endblock %}
