some login screen styling added

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,13 +1,15 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #eee;
+  --background-2: #ddd;
+  --color: #111;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html,
@@ -17,25 +19,19 @@ body {
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: var(--color);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
 
 @media (prefers-color-scheme: dark) {
+  :root {
+    --background: #111;
+    --background-2: #222;
+    --color: #eee;
+  }
+
   html {
     color-scheme: dark;
   }
