--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,38 +1,1 @@
-:root {
-  --background: #eee;
-  --background-2: #ddd;
-  --color: #111;
-}
-
-
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  background: var(--background);
-  color: var(--color);
-}
-
-
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #111;
-    --background-2: #222;
-    --color: #eee;
-  }
-
-  html {
-    color-scheme: dark;
-  }
-}
+@import "tailwindcss";
